--- a/adwaterfall/build.gradle
+++ b/adwaterfall/build.gradle
@@ -30,6 +30,9 @@ repositories {
     google()
     jcenter()
     maven { url "https://jitpack.io" }
+    maven {
+        url "https://artifactory.appodeal.com/appodeal"
+    }
 }
 
 dependencies {
@@ -39,13 +42,13 @@ dependencies {
 
     //gson
     implementation 'com.google.code.gson:gson:2.8.6'
-
-    //admob
-    implementation 'com.google.android.gms:play-services-ads:15.0.0'
+    
     //unity
     implementation 'com.unity3d.ads:unity-ads:3.4.8'
-    //facebook audience network
-    implementation 'androidx.annotation:annotation:1.0.0'
-    implementation 'com.facebook.android:audience-network-sdk:6.+'
+    //appodeal
+    implementation ('com.appodeal.ads:sdk:2.10.1.+') {
+        exclude group: 'com.appodeal.ads.sdk.networks', module: 'appodeal'
+        exclude group: 'com.appodeal.ads.sdk.networks', module: 'nast'
+    }
 }
 
