--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,9 @@ buildscript {
     repositories {
         google()
         jcenter()
-
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.3'
+        classpath 'com.android.tools.build:gradle:3.5.4'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -19,7 +18,9 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        maven {
+            url "https://artifactory.appodeal.com/appodeal"
+        }
     }
 }
 
