--- a/adwaterfall/build.gradle
+++ b/adwaterfall/build.gradle
@@ -8,6 +8,8 @@ android {
         versionCode 11
         versionName "1.11"
 
+        //Vector drawables backward compatibility solution
+        vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'consumer-rules.pro'
     }
@@ -47,5 +49,15 @@ dependencies {
     //facebook audience network
     implementation 'androidx.annotation:annotation:1.0.0'
     implementation 'com.facebook.android:audience-network-sdk:6.+'
+
+    //download
+    implementation 'com.mindorks.android:prdownloader:0.6.0'
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.4.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.4.0'
+    implementation 'com.github.bumptech.glide:okhttp3-integration:4.4.0'
+
+    implementation 'ir.samanjafari.easycountdowntimer:easycountdowntimer:2.5.0'
 }
 
