--- a/adwaterfall/build.gradle
+++ b/adwaterfall/build.gradle
@@ -6,7 +6,7 @@ android {
         minSdkVersion 16
         targetSdkVersion 29
         versionCode 11
-        versionName "1.11.4"
+        versionName "1.12.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'consumer-rules.pro'
@@ -43,7 +43,16 @@ dependencies {
     //gson
     implementation 'com.google.code.gson:gson:2.8.6'
 
+    //admob
+    implementation 'com.google.android.gms:play-services-ads:15.0.0'
     //appodeal
-    implementation 'com.appodeal.ads:sdk:2.10.1.+'
+    implementation ('com.appodeal.ads:sdk:2.10.1.+') {
+        exclude group: 'com.appodeal.ads.sdk.networks', module: 'a4g'
+        exclude group: 'com.appodeal.ads.sdk.networks', module: 'admob'
+        exclude group: 'com.appodeal.ads.sdk.networks', module: 'unity'
+    }
+    implementation 'com.appodeal.ads.sdk.networks:chartboost:2.10.1.6'
+    implementation 'com.appodeal.ads.sdk.networks:inmobi:2.10.1.7'
+    implementation 'com.appodeal.ads.sdk.networks:mopub:2.10.1.4'
 }
 
