--- a/adwaterfall/build.gradle
+++ b/adwaterfall/build.gradle
@@ -28,6 +28,7 @@ android {
 
 }
 
+
 repositories {
     google()
     jcenter()
@@ -44,8 +45,12 @@ dependencies {
 
     //admob
     implementation 'com.google.android.gms:play-services-ads:15.0.0'
+
     //unity
-    implementation 'com.unity3d.ads:unity-ads:4.2.1'
+    implementation "com.unity3d.mediation:mediation-sdk:0.5.0"
+    implementation "com.unity3d.mediation:unityads-adapter:0.5.0"
+    implementation "com.unity3d.mediation:facebook-adapter:0.5.0"
+
     //facebook audience network
     implementation 'androidx.annotation:annotation:1.0.0'
     implementation 'com.facebook.android:audience-network-sdk:6.+'
