--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,6 @@ buildscript {
     repositories {
         google()
         jcenter()
-
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.3'
@@ -19,7 +18,9 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        maven {
+            url 'https://unity3ddist.jfrog.io/artifactory/unity-mediation-mvn-prod-local/'
+        }
     }
 }
 
