--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,5 +40,7 @@ dependencies {
     implementation("com.squareup.okhttp3:okhttp:4.9.1")
 
     implementation project(path: ':adwaterfall')
+
+    implementation 'androidx.lifecycle:lifecycle-process:2.0.0'
 }
 
