--- a/adwaterfall/build.gradle
+++ b/adwaterfall/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.library'
 android {
-    compileSdkVersion 29
+    compileSdkVersion 33
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 29
-        versionCode 5
-        versionName "3.4"
+        targetSdkVersion 33
+        versionCode 6
+        versionName "3.5"
 
         //Vector drawables backward compatibility solution
         vectorDrawables.useSupportLibrary = true
@@ -44,20 +44,10 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
 
     //admob
-    implementation 'com.google.android.gms:play-services-ads:20.4.0'
+    implementation 'com.google.android.gms:play-services-ads:21.4.0'
 
     //unity
-    implementation "com.unity3d.mediation:mediation-sdk:0.5.0"
-    implementation "com.unity3d.mediation:unityads-adapter:0.5.0"
-    implementation "com.unity3d.mediation:facebook-adapter:0.5.0"
+    implementation 'com.unity3d.ads:unity-ads:4.5.0'
 
-    //facebook audience network
-    implementation 'androidx.annotation:annotation:1.0.0'
-    implementation 'com.facebook.android:audience-network-sdk:6.+'
-
-    //download
-    implementation 'com.mindorks.android:prdownloader:0.6.0'
-
-    implementation 'ir.samanjafari.easycountdowntimer:easycountdowntimer:2.5.0'
 }
 
