--- a/adwaterfall/build.gradle
+++ b/adwaterfall/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.library'
 android {
-    compileSdkVersion 33
+    compileSdkVersion 34
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 33
-        versionCode 8
-        versionName "3.8"
+        targetSdkVersion 34
+        versionCode 9
+        versionName "3.9"
 
         //Vector drawables backward compatibility solution
         vectorDrawables.useSupportLibrary = true
@@ -44,10 +44,13 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
 
     //admob
-    implementation 'com.google.android.gms:play-services-ads:21.4.0'
+    implementation 'com.google.android.gms:play-services-ads:22.3.0'
 
     //unity
-    implementation 'com.unity3d.ads:unity-ads:4.5.0'
+    implementation 'com.unity3d.ads:unity-ads:4.7.1'
+
+    //facebook
+    implementation 'com.facebook.android:audience-network-sdk:6.+'
 
 }
 
